--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,33 @@
 {
+    "name": "delete12/charts",
+    "description": "The laravel charting package",
+    "license": "MIT",
+    "type": "library",
     "require": {
-        "delete12/charts": "^1.2"
-    }
+        "php": ">=7.0",
+        "illuminate/support": "5.*",
+        "illuminate/console": "5.*",
+        "balping/json-raw-encoder": "^1.0"
+    },
+    "authors": [
+        {
+            "name": "Èrik Campobadal Forés ",
+            "email": "soc@erik.cat"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "ConsoleTVs\\Charts\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "ConsoleTVs\\Charts\\ChartsServiceProvider"
+            ]
+        }
+    },
+    "minimum-stability": "dev"
 }
+
+
